fix: change auth response, add refresh token
